# easegress-rust-uaparser

./: Cargo.toml  README.md  regexes.yaml
binary/: easegress.wasm
cloudflare/: Cargo.toml  wrangler.toml
cloudflare/src/: lib.rs
easegress/: Cargo.toml
easegress/src/: lib.rs
src/: errors.rs  lib.rs  uap.rs
src/models/: mod.rs  os.rs
src/regexes/: device.rs  mod.rs  os.rs
uap/: Cargo.toml
uap/src/: lib.rs
uap/src/models/: device.rs  mod.rs
uap/src/regexes/: device.rs  mod.rs  os.rs
